wrap fix

--- a/public/stylesheets/format.css
+++ b/public/stylesheets/format.css
@@ -64,6 +64,15 @@
   .column {
     width: 300px;
   }
+
+  /** INFORMATION FORM **/
+  #info-form {
+    width: 250px;
+    border-radius: 2px;
+  }
+
+  .form-header {
+  }
 }
 
 
