--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,7 +30,7 @@
 
 .wrap {
   margin: 0 auto;
-  width: 1200;
+  width: 1200px;
 }
 
 .column {
